fix: 2024 display_status düzeltildi - Header menüde artık gözükür
✅ Sorun Bulundu ve Çözüldü:
- 2024: is_active: true ✓
- 2024: display_status: Kronoloji → Aktif Fuarlar ✓

🎯 Test Sonucu:
- Önceki: Active fair years loaded: 3
- Şimdi: Active fair years loaded: 4 ✓

💡 Header Filter Logic:
- is_active: true AND display_status: 'Aktif Fuarlar'
- 2024 artık bu koşulu sağlıyor

🎉 Folder Collection + Tüm Özellikler Çalışıyor:
- Dinamik buton isimleri ✓
- Aktif/pasif header kontrolü ✓
- Slug değişiklikleri ✓
- Team member lookup ✓

--- a/src/content/fair-years/2024.yml
+++ b/src/content/fair-years/2024.yml
@@ -3,7 +3,7 @@ year: 2024
 page_slug: 2024-fuar-takvimi
 page_slug_en: 2024-fair-calendar
 is_active: true
-display_status: Kronoloji
+display_status: Aktif Fuarlar
 menu_order: 97
 page_content:
   title_tr: 2024 Fuar Takvimi
