--- a/src/content/chronology-years/2024.yml
+++ b/src/content/chronology-years/2024.yml
@@ -1,11 +1,12 @@
-year: 2024
+cms_button_label: "2021"
+year: 2021
 is_active: true
 fairs:
-  - name: "LeShow Moskova 2024"
-    city: "Moskova"
-    country: "Rusya"
-    sector: "Deri ve Kürk"
-    area: "15,000 m²"
+  - name: LeShow Moskova 2024
+    city: Moskova
+    country: Rusya
+    sector: Deri ve Kürk
+    area: 15,000 m²
     participants: "450"
-    description: "Rusya'nın en büyük deri ve kürk fuarı"
+    description: Rusya'nın en büyük deri ve kürk fuarı
     order: 1
