feat: Gelişmiş fuar sıralama sistemi eklendi
✨ Yeni Özellikler:
- CMS'de fuar kartları için manuel sıralama alanı eklendi
- Frontend'de 3 farklı sıralama seçeneği: Manuel, A-Z, Tarih
- Türkçe ve İngilizce sayfalarda sıralama sistemi

🔧 Teknik İyileştirmeler:
- TypeScript type definitions güncellendi
- JavaScript ile gerçek zamanlı DOM sıralaması
- Responsive sıralama butonları eklendi
- TypeScript 'this' context hataları düzeltildi

📱 Sayfalar:
- tr/fuarlarimiz.astro - Ana fuarlar sayfası
- tr/[slug].astro - Dinamik fuar sayfaları
- en/our-fairs.astro - İngilizce fuarlar sayfası
- en/[slug].astro - İngilizce dinamik sayfalar
- public/admin/config.yml - CMS konfigürasyonu
- src/content/config.ts - Type definitions

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -43,7 +43,7 @@ collections:
       - label: "Fuar Listesi"
         name: "fairs"
         widget: "list"
-        summary: "{{fields.basic_info.name_tr}} • {{fields.basic_info.date_tr}} • {{fields.basic_info.location_tr}}"
+        summary: "{{fields.basic_info.name_tr}} • {{fields.basic_info.date_tr}} • Sıra: {{fields.settings.order}}"
         collapsed: true
         minimize_collapsed: true
         fields:
@@ -90,6 +90,7 @@ collections:
             widget: "object"
             collapsed: true
             fields:
+              - {label: "Sıralama", name: "order", widget: "number", value_type: "int", default: 1, hint: "Fuar kartlarının görüntülenme sırası (1, 2, 3...)"}
               - {label: "Ana Slider'da Göster", name: "show_in_slider", widget: "boolean", default: false}
               - {label: "İletişim Formlarında Göster", name: "show_in_forms", widget: "boolean", default: true}
               - {label: "Kronolojide Göster", name: "show_in_chronology", widget: "boolean", default: false}
@@ -179,7 +180,7 @@ collections:
       - label: "Kronoloji Fuarları"
         name: "fairs"
         widget: "list"
-        summary: "{{fields.name}} • {{fields.city}}, {{fields.country}}"
+        summary: "{{fields.name}} • {{fields.city}}, {{fields.country}} • Sıra: {{fields.order}}"
         collapsed: true
         minimize_collapsed: true
         fields:
