fix: CMS settings alanları ve sıralama sorunları düzeltildi
🐛 Düzeltmeler:
- TypeScript schema'da settings alanları optional yapıldı
- CMS config'de required: false eklendi (kronoloji zorunluluk sorunu çözüldü)
- Fallback data'ya order alanları eklendi
- Nullish coalescing operator (??) kullanılarak daha güvenli default değerler

🎯 Çözülen Sorunlar:
- 'Kronolojide Göster' zorunlu olma sorunu
- Frontend sıralama butonları gözükmeme sorunu
- Settings undefined olduğunda hata alma sorunu

📝 Etkilenen Dosyalar:
- src/content/config.ts - Schema düzeltmeleri
- public/admin/config.yml - CMS field'ları optional
- Tüm fuar sayfaları - Güvenli default değerler

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -90,10 +90,10 @@ collections:
             widget: "object"
             collapsed: true
             fields:
-              - {label: "Sıralama", name: "order", widget: "number", value_type: "int", default: 1, hint: "Fuar kartlarının görüntülenme sırası (1, 2, 3...)"}
-              - {label: "Ana Slider'da Göster", name: "show_in_slider", widget: "boolean", default: false}
-              - {label: "İletişim Formlarında Göster", name: "show_in_forms", widget: "boolean", default: true}
-              - {label: "Kronolojide Göster", name: "show_in_chronology", widget: "boolean", default: false}
+              - {label: "Sıralama", name: "order", widget: "number", value_type: "int", default: 1, required: false, hint: "Fuar kartlarının görüntülenme sırası (1, 2, 3...)"}
+              - {label: "Ana Slider'da Göster", name: "show_in_slider", widget: "boolean", default: false, required: false}
+              - {label: "İletişim Formlarında Göster", name: "show_in_forms", widget: "boolean", default: true, required: false}
+              - {label: "Kronolojide Göster", name: "show_in_chronology", widget: "boolean", default: false, required: false}
               - label: "Slider İçeriği"
                 name: "slider_content"
                 widget: "object"
