--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -18,6 +18,7 @@ fairs:
   - settings:
       show_in_slider: false
       show_in_forms: true
+      order: 1
     basic_info:
       description_tr: ULUSLARARASI TEKNE VE SU SPORLARI FUARI
       sector: Diğer
@@ -39,9 +40,12 @@ fairs:
       phone: ""
       title_tr: Satış Direktörü
       title_en: Sales Director
+      team_member: Ahmet Hilmi Çoruk
+      hide_phone: true
   - settings:
       show_in_slider: false
       show_in_forms: true
+      order: 2
     basic_info:
       description_tr: ULUSLARARASI EV TEKSTİLİ VE DEKORASYON FUARI
       sector: Ev Tekstili ve Dekorasyon
@@ -62,9 +66,12 @@ fairs:
       phone: ""
       title_tr: Satış Direktörü
       title_en: Sales Director
+      team_member: Arzu Günal
+      hide_phone: true
   - settings:
       show_in_slider: false
       show_in_forms: true
+      order: 3
     basic_info:
       description_tr: GELİNLİK, ABİYE, DAMATLIK VE GELİNLİK KUMAŞI FUARI
       sector: Moda ve Tekstil
@@ -85,9 +92,12 @@ fairs:
       phone: ""
       title_tr: Satış Direktörü
       title_en: Sales Director
+      team_member: Seval Arslan
+      hide_phone: true
   - settings:
       show_in_slider: false
       show_in_forms: true
+      order: 4
     basic_info:
       description_tr: KOZMETİK, GÜZELLİK, WELLNESS & SPA VE SAÇ ÜRÜNLERİ FUARI
       sector: Güzellik ve Kozmetik
@@ -108,9 +118,12 @@ fairs:
       phone: ""
       title_tr: Satış Direktörü
       title_en: Sales Director
+      team_member: Seval Arslan
+      hide_phone: true
   - settings:
       show_in_slider: false
       show_in_forms: true
+      order: 5
     basic_info:
       description_tr: ULUSLARARASI SAÇ ÜRÜNLERİ FUARI
       sector: Güzellik ve Kozmetik
@@ -131,9 +144,12 @@ fairs:
       phone: ""
       title_tr: Satış Direktörü
       title_en: Sales Director
+      team_member: Seval Arslan
+      hide_phone: true
   - settings:
       show_in_slider: false
       show_in_forms: true
+      order: 6
     basic_info:
       description_tr: ULUSLARARASI ELEKTRİK, ENERJİ VE AYDINLATMA FUARI
       sector: Enerji
@@ -154,9 +170,12 @@ fairs:
       phone: +90 216 123 45 68
       title_tr: Satış Direktörü
       title_en: Sales Director
+      team_member: Seval Arslan
+      hide_phone: true
   - settings:
       show_in_slider: false
       show_in_forms: true
+      order: 7
     basic_info:
       description_tr: ULUSLARARASI BORU VE TEL FUARI
       sector: İnşaat
@@ -177,9 +196,12 @@ fairs:
       phone: +90 216 123 45 68
       title_tr: Satış Direktörü
       title_en: Sales Director
+      team_member: Ahmet Hilmi Çoruk
+      hide_phone: true
   - settings:
       show_in_slider: false
       show_in_forms: true
+      order: 8
     basic_info:
       description_tr: ULUSLARARASI GÜVENLİK VE YANGIN KORUMA FUARI
       sector: İnşaat
@@ -200,9 +222,12 @@ fairs:
       phone: ""
       title_tr: Satış Temsilcisi
       title_en: Sales Representative
+      team_member: Neşe Şenyurt
+      hide_phone: true
   - settings:
       show_in_slider: false
       show_in_forms: true
+      order: 9
     basic_info:
       description_tr: ULUSLARARASI PLASTİK VE KAUÇUK FUARI
       sector: İnşaat
@@ -223,9 +248,11 @@ fairs:
       phone: ""
       title_tr: Satış Direktörü
       title_en: Sales Director
+      team_member: Ahmet Hilmi Çoruk
   - settings:
       show_in_slider: false
       show_in_forms: true
+      order: 10
     basic_info:
       description_tr: ULUSLARARASI TİCARET FUARI
       sector: Diğer
@@ -246,9 +273,12 @@ fairs:
       phone: ""
       title_tr: Satış Direktörü
       title_en: Sales Director
+      team_member: Pınar Yalçın
+      hide_phone: true
   - settings:
       show_in_slider: false
       show_in_forms: true
+      order: 11
     basic_info:
       description_tr: ULUSLARARASI ELEKTRİK, ENERJİ AYDINLATMA VE BİNA OTOMASYON FUARI
       sector: Enerji
@@ -269,9 +299,12 @@ fairs:
       phone: ""
       title_tr: Satış Direktörü
       title_en: Sales Director
+      team_member: Pınar Yalçın
+      hide_phone: true
   - settings:
       show_in_slider: false
       show_in_forms: true
+      order: 12
     basic_info:
       description_tr: ULUSLARARASI KALIP VE PLASTİK FUARI
       sector: Enerji
@@ -292,3 +325,5 @@ fairs:
       phone: ""
       title_tr: Satış Direktörü
       title_en: Sales Director
+      team_member: Ahmet Hilmi Çoruk
+      hide_phone: true
