fix: Gelişmiş sıralama sistemi sorunları düzeltildi
🔧 Düzeltmeler:
- CMS'de order alanı 1-50 arası sınırlandırıldı
- Türkçe ve İngilizce tarih parsing sistemleri geliştirildi
- İngilizce dinamik sayfaya eksik sıralama sistemi eklendi
- Tarih formatları için güçlü regex parsing (17-25 OCAK 2026 formatı)

🎯 Geliştirmeler:
- Türkçe ay adları: OCAK, ŞUBAT, MART... desteklendi
- İngilizce ay adları: JANUARY, FEBRUARY, MARCH... desteklendi
- 25+ fuar için sıralama desteği (1-50 arası)
- Tüm sayfalarda tutarlı sıralama sistemi

📝 Etkilenen Dosyalar:
- public/admin/config.yml - Order field limits
- Tüm fuar sayfaları - Gelişmiş tarih parsing
- en/[slug].astro - Eksik sıralama sistemi eklendi

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -90,7 +90,7 @@ collections:
             widget: "object"
             collapsed: true
             fields:
-              - {label: "Sıralama", name: "order", widget: "number", value_type: "int", default: 1, required: false, hint: "Fuar kartlarının görüntülenme sırası (1, 2, 3...)"}
+              - {label: "Sıralama", name: "order", widget: "number", value_type: "int", min: 1, max: 50, default: 1, required: false, hint: "Fuar kartlarının görüntülenme sırası (1-50 arası)"}
               - {label: "Ana Slider'da Göster", name: "show_in_slider", widget: "boolean", default: false, required: false}
               - {label: "İletişim Formlarında Göster", name: "show_in_forms", widget: "boolean", default: true, required: false}
               - {label: "Kronolojide Göster", name: "show_in_chronology", widget: "boolean", default: false, required: false}
