fix: A-Z sıralama sayı öneki sorunu ve tarih field sistemi
🔤 A-Z Sıralama Düzeltmesi:
- Sayı önekleri temizleniyor (18. HOMEDECO → HOMEDECO)
- Regex: /^\d+\.\s*/ ile sayı önekleri kaldırılıyor
- Artık 'BEAUTY', 'BOOT', 'ELECTRO' şeklinde alfabetik sıralama

📅 CMS Tarih Sistemi:
- start_date ve end_date field'ları eklendi (date picker)
- Otomatik tarih formatı fonksiyonu eklendi
- Display: '16 - 18 ŞUBAT 2026' formatında
- Sorting: start_date kullanarak doğru kronolojik sıralama

🔧 TypeScript Schema:
- start_date ve end_date field'ları schema'ya eklendi
- Backward compatibility korundu (eski date_tr field'ları)

📝 CMS Kullanımı:
- Başlangıç Tarihi: Date picker
- Bitiş Tarihi: Date picker
- Tarih (TR/EN): Otomatik oluşturuluyor

✅ Sonuç:
- A-Z: Sayı öneksiz alfabetik sıralama
- Tarih: Doğru kronolojik sıralama
- CMS: Kullanıcı dostu tarih seçimi

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -54,8 +54,10 @@ collections:
             fields:
               - {label: "Fuar Adı (TR)", name: "name_tr", widget: "string", hint: "Türkçe fuar adı"}
               - {label: "Fuar Adı (EN)", name: "name_en", widget: "string", hint: "İngilizce fuar adı"}
-              - {label: "Tarih (TR)", name: "date_tr", widget: "string", hint: "Örnek: 17-25 OCAK 2028", required: false}
-              - {label: "Tarih (EN)", name: "date_en", widget: "string", hint: "Örnek: 17-25 JANUARY 2028", required: false}
+              - {label: "Başlangıç Tarihi", name: "start_date", widget: "date", format: "YYYY-MM-DD", hint: "Fuar başlangıç tarihi"}
+              - {label: "Bitiş Tarihi", name: "end_date", widget: "date", format: "YYYY-MM-DD", hint: "Fuar bitiş tarihi"}
+              - {label: "Tarih (TR) - Otomatik", name: "date_tr", widget: "string", hint: "Otomatik: 17-25 OCAK 2026 formatında", required: false}
+              - {label: "Tarih (EN) - Otomatik", name: "date_en", widget: "string", hint: "Otomatik: 17-25 JANUARY 2026 formatında", required: false}
               - {label: "Konum (TR)", name: "location_tr", widget: "string", hint: "Şehir, Ülke formatında"}
               - {label: "Konum (EN)", name: "location_en", widget: "string", hint: "City, Country formatında"}
               - {label: "Sektör", name: "sector", widget: "select", options: ["Moda ve Tekstil", "Ev Tekstili ve Dekorasyon", "Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları", "Kalıp & Plastik, İhtisas, Havuz", "Deri Fuarları & Güvenlik Sistemleri Fuarları", "Güzellik ve Kozmetik", "Enerji", "İnşaat", "Diğer"], allow_add: true}
