--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -267,6 +267,7 @@ fairs:
       title_tr: Satış Direktörü
       title_en: Sales Director
       team_member: Ahmet Hilmi Çoruk
+      hide_phone: true
   - settings:
       show_in_slider: false
       show_in_forms: true
