--- a/src/content/fair-years/2022.yml
+++ b/src/content/fair-years/2022.yml
@@ -18,13 +18,22 @@ fairs:
   - basic_info:
       name_tr: HomeDeco Kazakistan - Ev Tekstili ve İç Dekorasyon Ürünleri Fuarı
       name_en: HomeDeco Kazakhstan - Home Textile and Interior Decoration Fair
-      date: 22-25 Nisan 2022
+      start_date: 2022-04-22
+      end_date: 2022-04-25
+      date_tr: 22-25 NİSAN 2022
+      date_en: 22-25 APRIL 2022
       location_tr: Almatı, Kazakistan
       location_en: Almaty, Kazakhstan
       sector: Ev Tekstili ve Dekorasyon
+      description_tr: ULUSLARARASI EV TEKSTİLİ VE DEKORASYON FUARI
+      description_en: INTERNATIONAL HOME TEXTILE AND DECORATION FAIR
     visuals:
       logo: /images/homedeco-logo.png
       background_image: /images/fuarlar-arkaplan.jpg
+    representative:
+      team_member: Arzu Günal
+      hide_phone: true
     settings:
+      order: 1
       show_in_slider: false
       show_in_forms: false
