--- a/src/content/fair-years/2023.yml
+++ b/src/content/fair-years/2023.yml
@@ -18,13 +18,22 @@ fairs:
   - basic_info:
       name_tr: LeShow Moskova - Uluslararası Moda ve Tekstil Endüstrisi Fuarı
       name_en: LeShow Moscow - International Fashion and Textile Industry Fair
-      date: 15-18 Mart 2023
+      start_date: 2023-03-15
+      end_date: 2023-03-18
+      date_tr: 15-18 MART 2023
+      date_en: 15-18 MARCH 2023
       location_tr: Moskova, Rusya
       location_en: Moscow, Russia
       sector: Moda ve Tekstil
+      description_tr: ULUSLARARASI MODA VE TEKSTİL ENDÜSTRİSİ FUARI
+      description_en: INTERNATIONAL FASHION AND TEXTILE INDUSTRY FAIR
     visuals:
       logo: /images/fuarlar-logo.png
       background_image: /images/fuarlar-arkaplan.jpg
+    representative:
+      team_member: Seval Arslan
+      hide_phone: true
     settings:
+      order: 1
       show_in_slider: false
       show_in_forms: false
