--- a/src/content/fair-years/2025.yml
+++ b/src/content/fair-years/2025.yml
@@ -16,52 +16,88 @@ fairs:
   - basic_info:
       name_tr: LeShow Moskova - Uluslararası Moda ve Tekstil Endüstrisi Fuarı
       name_en: LeShow Moscow - International Fashion and Textile Industry Fair
-      date: 15-18 Mart 2025
+      start_date: 2025-03-15
+      end_date: 2025-03-18
+      date_tr: 15-18 MART 2025
+      date_en: 15-18 MARCH 2025
       location_tr: Moskova, Rusya
       location_en: Moscow, Russia
       sector: Moda ve Tekstil
+      description_tr: ULUSLARARASI MODA VE TEKSTİL ENDÜSTRİSİ FUARI
+      description_en: INTERNATIONAL FASHION AND TEXTILE INDUSTRY FAIR
     visuals:
       logo: /images/fuarlar-logo.png
       background_image: /images/fuarlar-arkaplan.jpg
+    representative:
+      team_member: Seval Arslan
+      hide_phone: true
     settings:
+      order: 1
       show_in_slider: true
       show_in_forms: true
   - basic_info:
       name_tr: HomeDeco Kazakistan - Ev Tekstili ve İç Dekorasyon Ürünleri Fuarı
       name_en: HomeDeco Kazakhstan - Home Textile and Interior Decoration Fair
-      date: 22-25 Nisan 2025
+      start_date: 2025-04-22
+      end_date: 2025-04-25
+      date_tr: 22-25 NİSAN 2025
+      date_en: 22-25 APRIL 2025
       location_tr: Almatı, Kazakistan
       location_en: Almaty, Kazakhstan
       sector: Ev Tekstili ve Dekorasyon
+      description_tr: ULUSLARARASI EV TEKSTİLİ VE DEKORASYON FUARI
+      description_en: INTERNATIONAL HOME TEXTILE AND DECORATION FAIR
     visuals:
       logo: /images/homedeco-logo.png
       background_image: /images/fuarlar-arkaplan.jpg
+    representative:
+      team_member: Arzu Günal
+      hide_phone: true
     settings:
+      order: 2
       show_in_slider: true
       show_in_forms: true
   - basic_info:
       name_tr: Fashion Week İstanbul Premium Tekstil ve Moda Endüstrisi Fuarı
       name_en: Fashion Week Istanbul Premium Textile and Fashion Industry Fair
-      date: 20-23 Haziran 2025
+      start_date: 2025-06-20
+      end_date: 2025-06-23
+      date_tr: 20-23 HAZİRAN 2025
+      date_en: 20-23 JUNE 2025
       location_tr: İstanbul, Türkiye
       location_en: Istanbul, Turkey
       sector: Moda ve Tekstil
+      description_tr: ULUSLARARASI MODA VE TEKSTİL ENDÜSTRİSİ FUARI
+      description_en: INTERNATIONAL FASHION AND TEXTILE INDUSTRY FAIR
     visuals:
       logo: /images/fuarlar-logo.png
       background_image: /images/fuarlar-arkaplan.jpg
+    representative:
+      team_member: Seval Arslan
+      hide_phone: true
     settings:
+      order: 3
       show_in_slider: false
       show_in_forms: true
-  - settings:
-      show_in_slider: false
-      show_in_forms: true
-    basic_info:
+  - basic_info:
       name_tr: Test 1950
       name_en: Test 1950
-      date: 21 01 1991
-      location_tr: turkey
-      location_en: turkey
+      start_date: 2025-01-21
+      end_date: 2025-01-21
+      date_tr: 21 OCAK 2025
+      date_en: 21 JANUARY 2025
+      location_tr: Turkey
+      location_en: Turkey
       sector: Ev Tekstili ve Dekorasyon
+      description_tr: TEST FUARI
+      description_en: TEST FAIR
     visuals:
       logo: /images/fuarlar-arkaplan.jpg
       background_image: /images/fuarlar-logo.png
+    representative:
+      team_member: Arzu Günal
+      hide_phone: true
+    settings:
+      order: 4
+      show_in_slider: false
+      show_in_forms: true
